# tex

./: .gitignore  Cargo.toml  LICENSE  README.md
clients/tex-desktop/: Cargo.toml  README.md  index.html  styles.css
clients/tex-desktop/src/: app.rs  main.rs
clients/tex-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/tex-desktop/src-tauri/src/: lib.rs  main.rs
clients/tex-desktop/src-tauri/src/tari/: exchange.rs  mod.rs
clients/tex-desktop/src/tari/: exchange.rs  mod.rs
component_templates/coin/: Cargo.toml  README.md
component_templates/coin/src/: lib.rs
component_templates/tex/: Cargo.toml  README.md
component_templates/tex/src/: lib.rs
development_tools/scripts/: Cargo.toml
development_tools/scripts/src/: lib.rs
libraries/tari_all_in_one_rust_sdk/: Cargo.toml  README.md
libraries/tari_all_in_one_rust_sdk/src/: indexer.rs  lib.rs  wallet_daemon.rs
libraries/tari_all_in_one_rust_sdk/tests/: marketplace.rs
libraries/tari_exchange/: Cargo.toml
libraries/tari_exchange/src/: lib.rs
