[package]
name = "tex-desktop-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
sycamore = { version = "0.9", features = ["suspense", "serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.76", features = ["Storage"] }
serde_json = "1.0.134"
# Exchange dependencies
tari_exchange.workspace = true
