[package]
name = "coin"
version = "0.1.0"
authors = ["Nikita Puzankov <git@bshn.rs>"]
edition = "2021"

[dependencies]
tari_template_abi.workspace = true
tari_template_lib.workspace = true



[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
log = "*"
tari_engine_types.workspace = true
tari_transaction.workspace = true
# tari_dan_common_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development", package = "tari_dan_common_types" }
# tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common_types" }
