[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
tari_all_in_one_rust_sdk.workspace = true
tokio.workspace = true
tari_indexer_client.workspace = true
tari_engine_types.workspace = true
tari_template_lib.workspace = true
tari_transaction.workspace = true
tari_wallet_daemon_client.workspace = true
# Exchange Dependencies
tari_exchange.workspace = true
