[package]
name = "tari_all_in_one_rust_sdk"
description = "Rust All in One SDK for Tari Network."
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["tari", "sdk", "rust"]
exclude = [
  ".gitignore",
  ".gitlab-ci.yml"
]

[dependencies]
derive_more.workspace = true
tari_engine_types.workspace = true
tari_indexer_client.workspace = true
tari_transaction.workspace = true
tari_template_lib.workspace = true
tari_wallet_daemon_client.workspace = true
tari_bor.workspace = true
hickory-proto.workspace = true
tokio.workspace = true
blake2 = "0.10"
curve25519-dalek = "4.1.3"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
digest = "0.10"
tari_crypto = "0.21.0"
tari_utilities = "0.8.0"
zeroize = "1"
serde = "1.0.217"
